--- a/open-sponsor/tsconfig.json
+++ b/open-sponsor/tsconfig.json
@@ -17,6 +17,7 @@
     "target": "es2015",
     "module": "es2020",
     "noImplicitAny": false,
+    "noImplicitReturns": false,
     "lib": [
       "es2018",
       "dom"
