--- a/open-sponsor/package.json
+++ b/open-sponsor/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "*",
+    "@auth0/angular-jwt": "^5.0.2",
     "angular2-flash-messages": "^3.0.1",
     "bcryptjs": "*",
     "body-parser": "*",
