--- a/open-sponsor/package.json
+++ b/open-sponsor/package.json
@@ -4,7 +4,7 @@
   "description": "An open-soure 12-step sponsor connection app",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node app",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
