--- a/open-sponsor/package.json
+++ b/open-sponsor/package.json
@@ -33,6 +33,7 @@
     "passport": "*",
     "passport-jwt": "*",
     "rxjs": "~6.6.0",
+    "socket.io": "^4.0.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
