--- a/open-sponsor/package.json
+++ b/open-sponsor/package.json
@@ -32,6 +32,7 @@
     "mongoose": "*",
     "passport": "*",
     "passport-jwt": "*",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "socket.io": "^4.0.1",
     "tslib": "^2.0.0",
